fix: explore card grid on small mobile (#223)

--- a/pokinder-frontend/src/page/Explore/ExploreCard.module.css
+++ b/pokinder-frontend/src/page/Explore/ExploreCard.module.css
@@ -14,7 +14,6 @@
   background-color: var(--card-color);
 
   border-radius: var(--border-radius-M);
-  box-shadow: 0px 4px 5px 2px #00000033;
 
   color: var(--font-foreground-color);
 
