--- a/pokinder-frontend/src/page/Explore/ExploreCardsGrid.module.css
+++ b/pokinder-frontend/src/page/Explore/ExploreCardsGrid.module.css
@@ -19,5 +19,5 @@
 .row {
   display: flex;
   justify-content: space-between;
-  gap: 16px;
+  gap: var(--card-gap);
 }
